# Veritas

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  FINDINGS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: aa716b1ad63a_initial_schema.py
app/: main.py
app/agents/: alphamatrix_agent.py  base.py  finance_agent.py  mock_stock_data.py
app/api/: routes.py
app/core/: config.py  exceptions.py  logging.py
app/db/: models.py  repository.py  session.py
app/schemas/: models.py
app/services/: judges.py  meta_eval.py  reporter.py  test_generator.py  test_runner.py
reports/: audit_report.csv  labels_to_fill.csv  meta_eval_results.json
scripts/: compute_meta_eval.py  prepare_meta_eval.py  report_from_db.py  run_and_persist.py  show_disagreements.py  try_alphamatrix.py  try_finance_agent.py  try_full_audit.py  try_full_pipeline.py  try_full_report.py  try_test_generator.py
tests/: test_alphamatrix_agent.py  test_api.py  test_finance_agent.py  test_judges.py  test_meta_eval.py  test_reporter.py  test_repository.py  test_schemas.py  test_test_generator.py  test_test_runner.py
veritas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
