[project]
name = "veritas"
version = "0.1.0"
description = "An autonomous agent that audits other AI agents for hallucination, tool misuse, and task failure."
requires-python = ">=3.11"
dependencies = [
    "groq>=0.11.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "rich>=13.7.0",
    "tenacity>=8.3.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "aiosqlite>=0.20.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
python_classes = "TestSuite*"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
